saiseva scroll flicker fix

--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -556,5 +556,14 @@ h3 {
 	margin-bottom: 10px;
 }
 .middlecontent{
-	height: calc(100vh - 150px);
+	height: calc(100vh - 160px);
+}
+
+.nemedtable td{
+	font-weight: 700;
+}
+.nemedtable td p{
+	font-size: 12px;
+	color: #444;
+	font-weight: normal;
 }
